--- a/herseyburada/package.json
+++ b/herseyburada/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.0"
+    "react-gravatar": "^2.6.3",
+    "react-hook-form": "^7.54.0",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
